static/css/navigation.css
.navbar {
    background-color: #191a1f !important;
    padding: 1rem 0;
}

.navbar-brand {
    color: #f2f5ff !important;
    font-weight: 700;
    transition: color 0.3s ease;
}

.navbar-brand:hover {
    color: #007bff !important;
}

.navbar-nav .nav-link {
    color: #f2f5ff !important;
    margin-right: 1rem;
    transition: color 0.3s ease;
}

.navbar-nav .nav-link:hover, .navbar-nav .nav-link:focus {
    color: #0063cd !important;
    background-color: #f2f5ff !important;
}



.navbar-nav .nav-active, .navbar-nav .nav-link.active {
    color: #f2f5ff !important;
    background-color: #007bff !important;
    border-radius: .25rem;
}

.navbar-brand img {
    height: 50px;
    width: auto;
    margin-right: 10px;
    vertical-align: middle;
    border-top-left-radius: 4px;
    border-top-right-radius: 0;
    border-bottom-right-radius: 4px;
    border-bottom-left-radius: 0rem;
}

.navbar-brand {
    display: flex;
    align-items: center;
    white-space: nowrap;
    color: #f2f5ff !important;
}

.title-container {
    display: flex;
    flex-direction: column;
    margin-left: 10px;
}

.navbar-title {
    font-size: 20px;
    font-weight: 700;
    display: flex;
    align-items: center;
    white-space: nowrap;
    transition: all 0.3s ease;
}

.navbar-title i {
    margin-left: 8px;
}

.navbar-subtitle {
    font-size: 12px;
    font-weight: 400;
    color: #f2f5ff !important;
    opacity: 0; 
    transition: opacity 0.5s ease-in-out;
}

.navbar .container-fluid {
    padding-right: 1rem;
    padding-left: 1rem;
}

.navbar-nav .nav-link {
    color: #f2f5ff !important;
    padding: 0.5rem 1rem;
    font-weight: 500;
    transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
}

